# dataStructures

Assignment1/: IntSet.cpp  a1  a1test.txt
Assignment2/: .IntSet.cpp.un~  .Makefile.un~  IntSet.cpp  IntSet.cpp~  Makefile  Makefile~  a2  a2addTest.in  a2removeTest.in  a2test2.in  a2unionTest.in
Assignment2/Hard Copy/: IntSet (Hard Copy).docx
Assignment3/: Sequence.cpp  a3  a3a
Assignment3.1/: a3a
Assignment3.1/Assignment3/: .Sequence.cpp.un~  Sequence.cpp  a3  a3atest.out
Assignment3/Untitled.xcworkspace/: contents.xcworkspacedata
Assignment4/: sequence.cpp
Assignment4/Assginment4/: Makefile  a4  a4test.out  sequence.h  sequence.template  sequenceTest.cpp
Assignment4/Assign04SuppliedFiles01/: Makefile  a4s1  sequence.cpp  sequence.h  (+1 more)
Assignment5p1/: .Makefile.swp  Assign05P1.cpp  CMakeLists.txt  a5p1  a5p1test.out  assignment.txt  llcpImp.cpp  llcpInt.h
Assignment5p1/Assign05P2SuppliedFiles/: cnPtrQueue.cpp  nodes_LLoLL.cpp
Assignment5p1/assignment.rtfd/: TXT.rtf
Assignment5p2/: .Makefile.swp  CMakeLists.txt  Makefile  a5p2  assignment.txt  cnPtrQueue.cpp  nodes_LLoLL.cpp
Assignment6/: Assign06P1A.cpp  CMakeLists.txt  a6p1A  a6p1Atest.out
Assignment6pt1B/: Assign06P1B.cpp  CMakeLists.txt  a6p1B  llcpImp.cpp  llcpInt.h
Assignment6pt2/: Assign06P2.cpp  CMakeLists.txt  a6p2  a6p2.out  btNode.cpp  btNode.h
Assignment7/: Assign07Test.cpp  CMakeLists.txt  DPQueue.cpp  DPQueue.h  a7
Assignment8/: Assign08.cpp  CMakeLists.txt  HashTable.cpp  a8  mya8test.txt
AssignmentOptional/: CMakeLists.txt  ao1  ao1.out  btNode.cpp
untitled/: main.cpp
(+6 files in other folders)
